[GEOT-6512] AA review 1
- URLFactory class renamed to URLCheckers
- URLChecker implementations will be scanned through CommonFactoryFinder
- Fixed error messages
- Removed Datastore param for enabling HTTP security
- Other rafactorings (e.g spellings, namings convensions)

# Conflicts:
#	modules/library/xml/src/test/java/org/geotools/xml/styling/SLDStyleTest.java